--- a/JavascriptAgileEngineering/workspace/tests.html
+++ b/JavascriptAgileEngineering/workspace/tests.html
@@ -17,14 +17,13 @@
   <script src="environment/customerBalance.js"></script>
   <script src="environment/exampleTests.js"></script>
   
-  <!--
   <script src="queue/queue.js"></script>
   <script src="queue/queueTests.js"></script>
-  <script src="twitter/twitterTests.js"></script>
   <script src="twitter/twitter.js"></script>
+  <script src="twitter/twitterTests.js"></script>
+  <script src="twitter/twitterMockedTests.js"></script>
 
   <script src="sieve/sieve.js"></script>
   <script src="sieve/sieveTests.js"></script>
-  -->
 </body>
 </html>
